--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <html>
 	<head>
-		<title>Nahee's website</title>
+		<title>Doris's Dreamland</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
+		<script type="text/javascript">
+			/* for (var i = 0; i <1; i++) 
+			{
+				console.log("	L");
+
+				for (var j = 0; j <1; j++) 
+				{
+					console.log("	");
+					console.log("	O");
+				}
+				for (var a = 0; a <1; a++) 
+				{
+					console.log("	");
+					console.log("	S");
+				}
+				for (var b = 0; b <1; b++) 
+				{
+					console.log("	");
+					console.log("	T");
+				}
+			} */
+			var a="lost";
+
+			for (var i = 0; i <4; i++) 
+			{
+				console.log(a);
+				console.log("	@")
+
+				for (var j = 0; j <4; j++) 
+				{
+					
+					console.log("	"+"	sea");
+					
+				}
+			}
+			if(j=4)
+			{
+				console.log("found");
+			}
+
+		</script>
+		<h1>Dreamland</h1>
+		
+		
+
 		<div class="main_div">
-			<img src="img/ovum.png" id="img1">
+			<img src="http://clipart-library.com/image_gallery2/Kirby-PNG-Image.png" id="kirby-jump">
 		</div>
+		
+		<p>
+			<i>Lorem</i>
+			<b>ipsum dolor</b>
+			sit amur,<br>consectetur adiscving
+		</p>
+		
+
 	</body>
 </html>
