--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 			<b>ipsum dolor</b>
 			sit amur,<br>consectetur adiscving
 		</p>
+		<p1>
+			Transhumanism's video on youtube was the idea on humanism and it ties as it develops through technologies.
+			The video also talked about the idea that each year computers power's double and growing exponentially. We 
+			depend more and more on technology and it becomes symbiotic relationship
 
-
+		</p1>
 	</body>
 </html>
