--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 			Transhumanism's video on youtube was the idea on humanism and it ties as it develops through technologies.
 			The video also talked about the idea that each year computers power's double and growing exponentially. We 
 			depend more and more on technology and it becomes symbiotic relationship
+			
+			In 'Conversation is a cybernetic technology' by dan taeyoung, talks how communication between humans have 
+			transformed into social networking spaces or online spaces. We see a new method of communication. Dan 
+			continues further to discuss to understand conversations we have to structure them,categorize them and
+			how they happen.
 
 		</p1>
 	</body>
