--- a/index.html
+++ b/index.html
@@ -6,24 +6,19 @@
 	<body>
 		<script type="text/javascript">
 			var a="lost";
-
 			for (var i = 0; i <4; i++)
 			{
 				console.log(a);
 				console.log("	@")
-
 				for (var j = 0; j <4; j++)
 				{
-
 				console.log("	"+"	sea");
-
 				}
 			}
 			if(j=4)
 			{
 			console.log("found");
 			}
-
 		</script>
 		<h1>Dreamland</h1>
 
@@ -32,7 +27,7 @@
 		<div class="main_div">
 			<img src="http://clipart-library.com/image_gallery2/Kirby-PNG-Image.png" id="kirby-jump">
 		</div>
-
+		<a href="week1.html">
 		<p>
 			<i>Lorem</i>
 			<b>ipsum dolor</b>
