--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="main_div">
 			<img src="http://clipart-library.com/image_gallery2/Kirby-PNG-Image.png" id="kirby-jump">
 		</div>
-		<a href="week1.html">
+		<a href="week1.html"></a>
 		<p>
 			<i>Lorem</i>
 			<b>ipsum dolor</b>
