--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<div>
 			<ul>
-				<li><a href="Homework.html">Homework</a> </li>
+				<li><a href="homework.html">Homework</a> </li>
 			<ul>
 		</div>
 
