--- a/homework.html
+++ b/homework.html
@@ -8,18 +8,19 @@
 
 
         <div>
-        	<ul>
-        		<li><a href="index.html">Home</a> </li>
-            <li><a href="about.html">About</a></li>
-        	<ul>
+        <ul>
+        <li><a href="index.html">Home</a> </li>
+        <li><a href="about.html">About</a></li>
+        <ul>
         </div>
 
-		<div>
-			<ul>
-        <li>
-				<li><a href="week1.html">Week 1</a> </li>
-			<ul>
-		</div>
+	<div>
+	<ul>
+		<li><a href="weel2.html@>Week 2</a></li>
+	<li><a href="week1.html">Week 1</a> </li>
+	<ul>
+	</div>
+	
 
 	</body>
 </html>
