--- a/homework.html
+++ b/homework.html
@@ -16,8 +16,9 @@
 
 	<div>
 	<ul>
-		<li><a href="weel2.html@>Week 2</a></li>
+	
 	<li><a href="week1.html">Week 1</a> </li>
+		<li><a href="week2.html>Week 2</a></li>
 	<ul>
 	</div>
 	
