--- a/homework.html
+++ b/homework.html
@@ -18,7 +18,7 @@
 	<ul>
 	
 	<li><a href="week1.html">Week 1</a> </li>
-	<li><a href="week2.html">Week 2</a></li>
+	<li><a href="week2/index.html">Week 2</a></li>
 	</ul>
 	</div>
 	
