--- a/week3/index.html
+++ b/week3/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <button onclick="goBack()">Back</button>
-<img src="folderpoetry.jpeg">
+<img src="folderpoetry.png">
 <script type="text/javascript">
 	function goBack(){
 		window.history.back();
