--- a/week3/index.html
+++ b/week3/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <button onclick="goBack()">Back</button>
+<div>
+	<li><a href="snac.html">Snack Assignment</a></li>
+</div>
 <img src="folderpoetry.jpg">
 <script type="text/javascript">
 	function goBack(){
