--- a/week3/snac.html
+++ b/week3/snac.html
@@ -5,11 +5,14 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="index.css" />
-	<link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Coda+Caption:800|Sriracha&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <div class="Taki">
+	<div class="red">
+		<h2>Barcel</h2>
+	</div>
 	<h1>Takis</h1>
 	<div class="fuego">
 	<p>fuego</p>
