--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
 		<div>
 			<ul>
-				<li><a href="homework.html">Homework</a> </li>
+				<li><a href="home.html">Home</a><li>
+				<li><a href="homework.html">Work</a> </li>
+				<li><a href="about.html">About</a></li>
+				
 			<ul>
 		</div>
 
