--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<div>
 			<ul>
-				<li><a href="home.html">Home</a><li>
+				<li><a href="index.html">Home</a><li>
 				<li><a href="homework.html">Work</a> </li>
 				<li><a href="about.html">About</a></li>
 				
