--- a/index.html
+++ b/index.html
@@ -1,34 +1,28 @@
 <html>
-	<head>
-		<title>Doris Morales</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-	</head>
-	<body>
-		<script type="text/javascript">
-			var a="lost";
-			for (var i = 0; i <4; i++)
-			{
-				console.log(a);
-				console.log("	@")
-				for (var j = 0; j <4; j++)
-				{
-				console.log("	"+"	sea");
-				}
-			}
-			if(j=4)
-			{
-			console.log("found");
-			}
-		</script>
 
-		<div>
-			<ul>
-				<li><a href="index.html">Home</a><li>
-				<li><a href="homework.html">Work</a> </li>
-				<li><a href="about.html">About</a></li>
-				
-			<ul>
+	<head>
+		<title>Home</title>
+		<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Permanent+Marker|Shadows+Into+Light&display=swap" rel="stylesheet">
+	</head>
+
+
+	<body>
+		<nav>
+			<div class="name">
+				<h1>Doris Morales</h1>
+			</div>
+			<ul class="nav-link">
+				<li><a href="index.html" class="nav-items" class="active">Home</a></li>
+				<li><a href="homework.html" class="nav-items">Work</a></li>
+				<li><a href="about.html" class="nav-items">About</a></li>
+			</ul>
 		</div>
+	</nav>
+
+
+
 
 	</body>
+
 </html>
