--- a/week1.html
+++ b/week1.html
@@ -6,12 +6,17 @@
 </head>
 <body>
 
-      <div>
-      	<ul>
-      		<li><a href="index.html">Home</a> </li>
-          <li><a href="about.html">About</a></li>
-      	<ul>
-      </div>
+  <nav>
+			<div class="name">
+				<h1>Doris Morales</h1>
+			</div>
+			<ul class="nav-link">
+				<li><a href="index.html" class="nav-items" class="active">Home</a></li>
+				<li><a href="homework.html" class="nav-items">Work</a></li>
+				<li><a href="about.html" class="nav-items">About</a></li>
+			</ul>
+		</div>
+	</nav>
 
   <h1>Week 1</h1>
   <h3>Transhumanism</h3>
