--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<ul class="nav-link">
 				<li><a href="index.html" class="nav-items" class="active">Home</a></li>
 				<li><a href="homework.html" class="nav-items">Work</a></li>
-				<li><a href="about.html" class="nav-items">About</a></li>
+				<li><a href="about/about.html" class="nav-items">About</a></li>
 			</ul>
 		</div>
 	</nav>
