--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 		</div>
 	</nav>
 
+	<div class="sidebar-left">
+	</div>
+
+	<div class="content">
+	</div>
+
+	<div class="sidebar-right">
+	</div>
 
 
 
