--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Home</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="icon" href="https://i.ya-webdesign.com/images/transparent-rilakkuma-icon-4.png" type="image/gif" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Permanent+Marker|Shadows+Into+Light&display=swap" rel="stylesheet">
 	</head>
 
