--- a/homework.html
+++ b/homework.html
@@ -20,6 +20,7 @@
 	<li><a href="week1.html">Week 1</a> </li>
 	<li><a href="week2/index.html">Week 2</a></li>
 	<li><a href="week3/index.html">Week 3</a></li>
+	<li><a href="week5/index.html">Week 5</a></li>
 		
 	</ul>
 	</div>
